basic file selection

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="utf-8">
     <title>Extract My File</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
     <p1>Work in progress ...</p1>
+    <br>
+    <!--Use input dialog to get input file-->
+    <input type="file" id="source" />
+    <br>
+    <div id="drop_zone">Drop input file here</div> 
+    <output id=info></output>
+    <script src="script.js"></script>
 </body>
 
 </html>
