--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 </head>
 
 <body>
-    <p1>Work in progress ...</p1>
+    <p>Work in progress ...</p>
     <br>
-    <!--Use input dialog to get input file-->
-    <input type="file" id="source" />
-    <br>
-    <div id="drop_zone">Drop input file here</div> 
-    <output id=info></output>
     <script src="script.js"></script>
 </body>
 
