moved logic to ES6 module

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p>Work in progress ...</p>
     <br>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
