--- a/src_website/index.html
+++ b/src_website/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <title>Extract my file</title>
     <meta name="description" content="Extract (unzip, expand) files locally in your browser." />
-    <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -17,7 +12,7 @@
       <div class="drop-zone">
         <div class="file-upload-output-container">
           <div class="file-upload-container">
-            <label for="file-upload"> <img src="open_in_browser-24px.svg" />Browse</label>
+            <label for="file-upload"><span class="open-in-browser-icon">Browse</span></label>
             <input id="file-upload" type="file" />
           </div>
           <div class="unsupported-filetype-info warning hide">Unsupported Filetype</div>
@@ -44,6 +39,5 @@
         </p>
       </div>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
